# ProtoVoxelRenderer

./: Cargo.toml  TODO
design documents/: game_pipeline.txt  render_pipeline.kra  render_pipeline.kra~  texture_data.xcf
design documents/mapping templates/: barrel.vox
resources/magica voxels/: brick.vox  brittle_dirt.vox  broken_stair.vox  dirt_test.vox  duct.vox  grass_one.vox  grey_stair.vox  jaggy_stone.vox  leaf.vox  oddball_test.vox  snow.vox  tree_log.vox
resources/magica voxels/32 set/: bricks.vox  grass.vox  inscribed stone.vox  plank_tile.vox  ridged_stone.vox  stone_stairs.vox  stool.vox
shaders/: blur_pass.glsl  compute_test.glsl  depth_to_length.glsl  mandelbrot.glsl  monitor_pass.glsl  raster_vertex.glsl  ray_generation.glsl  ray_traverse.glsl  tree_traverse.glsl  vertex_one.glsl  voxel_sphere.glsl
src/: app_loop.rs  audio_engine.rs  ecs_user.rs  first_winit.rs  input.rs  main.rs  move_engine.rs  world_engine.rs
src/app_loop/: vk_init.rs  vox_drawer.rs
src/app_loop/vk_init/: vk_renderer.rs  vk_window.rs
src/app_loop/vox_drawer/: entity_drawer.rs  postprocess_drawer.rs  top_down_world_drawer.rs  vox_map_context.rs
src/practices/: compute_operations.rs  copy_buffer.rs  fractal_practice.rs  graphics_pipeline.rs  image_practice.rs  mod.rs
src/world_engine/: chunk_generators.rs  data_structures.rs  displaced_chunks.rs  legacy_map.rs  map.rs  object.rs  voxel_manager.rs
src/world_engine/object/: byte_voxels.rs  dot_vox_wrapper.rs  standard_voxel_prefab.rs  voxel_barrel.rs
