[package]
name = "rust_test"
version = "0.1.0"
authors = ["Andrew Choi <kimchy101@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19.0"
vulkano-win = "0.19"
winit = "0.22"
rand = { version = "0.7.3", features = ["small_rng"] }
noise = "0.6.0"
image = "0.23"
nalgebra = "0.20.0"
cpal = "0.11.0"
hound = "3.4.0"
dot_vox = "4.1.0"
indexmap = "1.3.2"
legion = "0.2.1"